@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.8 2004/11/28 02:46:53 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.9 2004/12/09 07:52:33 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  09 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
+  Separated network mounts from partition data structure in GLIInstallProfile
 
   27 Nov 2004; Andrew Gaffney <agaffney@gentoo.org>
   Changed the way GLIStorageDevice.py determines the amount a ext2/3 filesystem
